--- a/booksmith_proj/static/css_files/search_results.css
+++ b/booksmith_proj/static/css_files/search_results.css
@@ -1,8 +1,11 @@
 .books-container {
   display: flex;
-  justify-content: center;
+  justify-content: center; /* Centers items horizontally */
+  align-items: center; /* Centers items vertically */
   gap: 50px;
   flex-wrap: wrap;
+  margin: auto; /* Centers the container horizontally within its parent */
+  height: 100%; /* Adjust height to match the parent's */
 }
 
 .book-card {
