--- a/booksmith_proj/static/css_files/base.css
+++ b/booksmith_proj/static/css_files/base.css
@@ -258,21 +258,43 @@
   display: inline-block;
 }
 
+.profile-dropdown-btn {
+  background-color: #bd2000;
+  color: white;
+  font-size: 16px;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.profile-dropdown-btn:hover {
+  background-color: #a00000;
+}
+
 .profile-dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  background-color: white;
+  min-width: 200px;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1;
   right: 0;
 }
 
 .profile-dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding: 10px 15px;
   text-decoration: none;
   display: block;
+  transition: background-color 0.3s ease;
+}
+
+.profile-dropdown-content a:hover {
+  background-color: #f1f1f1;
 }
 
 .profile-dropdown:hover .profile-dropdown-content {
