--- a/booksmith_proj/static/css_files/landing_page.css
+++ b/booksmith_proj/static/css_files/landing_page.css
@@ -128,6 +128,7 @@ svg {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
   border-radius: 10px;
 }
 .thumbnail .item.active {
