--- a/booksmith_proj/templates/accounts/cart.html
+++ b/booksmith_proj/templates/accounts/cart.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="center-block">
-    <h1>Your Shopping Cart</h1>
+
     <div class="cart-container">
         <div class="cart-items">
             <div class="cart-header">
@@ -22,14 +22,14 @@
                 {% for item in cart_items %}
                 <li class="cart-item">
                     <div class="item-details">
-                        <img src="{{ item.book.image_url }}" alt="{{ item.book.title }}" class="item-image">
+                        <img src="{{ item.book.thumbnail_image_url }}" alt="{{ item.book.title }}" class="item-image">
                         <div class="item-info">
                             <span class="item-title">{{ item.book.title }}</span>
                             <span class="item-author">{{ item.book.author }}</span>
                         </div>
                     </div>
                     <div class="item-quantity">
-                        <button class="btn-quantity" 
+                        <button class="btn-quantity"
                                 onclick="updateCart({{ item.book.id }}, 'decrease')"
                                 {% if item.quantity == 1 %}disabled{% endif %}>-</button>
                         <span>{{ item.quantity }}</span>
@@ -48,7 +48,7 @@
         </div>
         <div class="order-summary">
             <div class="order-header">
-              <h3>Order Summary</h3>  
+              <h3>Order Summary</h3>
             </div>
             <div class="summary-item">
                 <span>Subtotal</span>
@@ -65,8 +65,8 @@
                 <span>Order Total</span>
                 <span>${{ total_price|floatformat:2 }}</span>
             </div>
-            <button class="btn checkout-btn {% if not cart_items %}disabled{% endif %}" 
-                    onclick="if({% if cart_items %}true{% else %}false{% endif %}) window.location.href='{% url 'checkout' %}'" 
+            <button class="btn checkout-btn {% if not cart_items %}disabled{% endif %}"
+                    onclick="if({% if cart_items %}true{% else %}false{% endif %}) window.location.href='{% url 'checkout' %}'"
                     {% if not cart_items %}disabled{% endif %}>
                 CHECKOUT
             </button>
