--- a/booksmith_proj/static/css_files/checkout.css
+++ b/booksmith_proj/static/css_files/checkout.css
@@ -280,3 +280,8 @@ footer {
 .quantity {
   color: grey;
 }
+.original-price {
+  color: #888; /* Light gray to show it's discounted */
+  text-decoration: line-through;
+  font-size: 1.2rem;
+}
