added saved amount feature in checkout and Payment model

--- a/booksmith_proj/templates/accounts/checkout.html
+++ b/booksmith_proj/templates/accounts/checkout.html
@@ -91,6 +91,10 @@
           <span>Order Total</span>
           <span>${{ total_price|floatformat:2 }}</span>
       </div>
+      <div class="summary-item">
+        <span>Saved</span>
+        <span>${{ total_saved|floatformat:2 }}</span>
+      </div>
     </div>
   
 
