--- a/booksmith_proj/static/css_files/update_profile.css
+++ b/booksmith_proj/static/css_files/update_profile.css
@@ -108,3 +108,17 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
   padding: 0.85rem 1.5rem;
   border-color: rgba(24, 28, 33, 0.03) !important;
 }
+
+.form-group .form-label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.form-group input[type="date"] {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
