--- a/booksmith_proj/templates/accounts/update_profile_picture.html
+++ b/booksmith_proj/templates/accounts/update_profile_picture.html
@@ -37,36 +37,13 @@
                   <label class="btn btn-outline-primary">
                     Upload new photo {{ form.image }}
                   </label>
-                  <div class="text-light small mt-1">
+                  <div class="text-black small mt-1">
                     Allowed JPG, GIF or PNG. Max size of 800K
                   </div>
                 </div>
               </div>
               <hr class="border-light m-0" />
               <div class="card-body">
-                <div class="form-group">
-                  <label class="form-label">Username</label>
-                  <input
-                    type="text"
-                    class="form-control mb-1"
-                    value="{{ user.username }}"
-                    disabled
-                  />
-                </div>
-                <div class="form-group">
-                  <label class="form-label">Name</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    value="{{ user.get_full_name }}"
-                    disabled
-                  />
-                </div>
-                <div class="form-group">
-                  <label class="form-label">Gender</label>
-                  {{ form.gender }}
-                  <!-- Use form field for gender -->
-                </div>
                 <div class="form-group">
                   <label class="form-label">Birthdate</label>
                   {{ form.birthdate }}
